# koinenlp

./: .gitignore  .travis.yml  README  README.md  README.rst  koinenlp.py  leonard.sh  notes.txt  pyproject.toml  setup.py  test.py  tests.json
doc/: Makefile  api.rst  conf.py  index.rst  installing.rst  using-koinenlp.rst
koine_nlp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
koinenlp/: __init__.py
src/koinenlp/: __init__.py
tests/: test.py  tests.json
