[project]
name = "koinenlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathan D. Smith", email = "nathan@smithfam.info" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
koinenlp = "koinenlp:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
